# crypto-exchange-platform

./: .gitignore  CMakeLists.txt  README.md
data/: test.csv
include/: FileReader.h  MainApp.h  MainMenu.h  OrderBook.h  OrderBookEntry.h  Wallet.h
src/: FileReader.cpp  MainApp.cpp  MainMenu.cpp  OrderBook.cpp  OrderBookEntry.cpp  Wallet.cpp  main.cpp
